Remove all uses of deprecated Long constructor
This change was generated by running this script in the java folder:

  for file in `git grep 'new Long(' | cut -f 1 -d':' | sort | uniq`; do
    sed 's/new Long(/Long.valueOf(/g' -i $file
  done

This has been doubled by a review of the change to remove the useless
(un)boxing instances.