@@ -179,7 +179,7 @@ public class SchemaParser {
             // Handle ranges
             child = simpleType.getChild("minInclusive", schemaNamespace);
             if (child != null) {
-                Long value = new Long(child.getAttributeValue("value"));
+                Long value = Long.valueOf(child.getAttributeValue("value"));
                 lc.setMinInclusive(value);
             }
             else if (schemaType.equals("int")) {
@@ -187,7 +187,7 @@ public class SchemaParser {
             }
             child = simpleType.getChild("maxInclusive", schemaNamespace);
             if (child != null) {
-                Long value = new Long(child.getAttributeValue("value"));
+                Long value = Long.valueOf(child.getAttributeValue("value"));
                 lc.setMaxInclusive(value);
             }
             else if (schemaType.equals("int")) {
